--- a/HTML_ch19.html
+++ b/HTML_ch19.html
@@ -8,7 +8,54 @@
 </head>
 <body>
   <img src="./mv.png/mv.png" alt="サンプル画像">
+  <p>最新のテクノロジーで<em>社会課題</em>を解決</p>
+
   <h1>会社概要</h1>
+
+  <!--HTML 17章 Emmet  tr*6>th+td -->
+
+  <table>
+    <tr>
+      <th>会社名</th>
+      <td>株式会社TECH</td>
+    </tr>
+    <tr>
+      <th>代表者</th>
+      <td>山田太郎</td>
+    </tr>
+    <tr>
+      <th>所在地</th>
+      <td>東京都渋谷区神宮前</td>
+    </tr>
+    <tr>
+      <th>設立</th>
+      <td>2019/07/17</td>
+    </tr>
+    <tr>
+      <th>従業員数</th>
+      <td>100人</td>
+    </tr>
+    <tr>
+      <th>資本金</th>
+      <td>1000万円</td>
+    </tr>
+  </table>
   <h1>お問い合わせ</h1>
+
+  <form action="HTML_ch19.html" method="get">
+    <!-- for属性を使ってラベルタグに部品を関連づけるパターン -->
+    <label for="c_name">会社名</label>
+    <input type="text"　name="c_name" id="c_name">　<br>
+    <!-- ラベルタグにラベルと部品の両方を囲むパターン -->
+    <label>
+      お名前<input type="text" name="name">
+    </label><br>
+    <label>
+      メールアドレス<input type="text" name="mail_address">
+    </label><br>
+    <label>
+      お問い合わせ内容<textarea name="textarea" cols="80" rows="10"></textarea>
+    </label><br>
+  </form>
 </body>
 </html>
