--- a/HTML_ch19.html
+++ b/HTML_ch19.html
@@ -7,17 +7,20 @@
   <title>HTML 19章演習問題</title>
 </head>
 <body>
-  <nav>
-    <h1>株式会社TECH</h1>
-    <ul>
-      <!-- #はURLフラグメント 見出しのIDにとべる -->
-      <li><a href="HTML_ch19.html">ホーム</a></li>
-      <li><a href="#">企業情報</a></li>
-      <li><a href="#c_overview">会社概要</a></li>
-      <li><a href="#">よくある質問</a></li>
-      <li><a href="#contact_form">お問い合わせ</a></li>
-    </ul>
-  </nav>
+  <header>
+    <nav>
+      <h1>株式会社TECH</h1>
+      <ul>
+        <!-- #はURLフラグメント 見出しのIDにとべる -->
+        <li><a href="HTML_ch19.html">ホーム</a></li>
+        <li><a href="#">企業情報</a></li>
+        <li><a href="#c_overview">会社概要</a></li>
+        <li><a href="#">よくある質問</a></li>
+        <li><a href="#contact_form">お問い合わせ</a></li>
+      </ul>
+    </nav>
+  </header>
+
 
   <img src="./mv.png/mv.png" alt="サンプル画像">
   <p>最新のテクノロジーで<em>社会課題</em>を解決</p>
@@ -32,7 +35,7 @@
     </tr>
     <tr>
       <th>代表者</th>
-      <td>山田太郎</td>
+      <td>山田 太郎</td>
     </tr>
     <tr>
       <th>所在地</th>
@@ -70,5 +73,8 @@
 
     <input type="submit" value="お申し込み">
   </form>
+  <footer>
+    <small>&copy; 2020 TECH inc.</small>
+  </footer>
 </body>
 </html>
